# printcraft

./: LICENSE  README.md  pyproject.toml  setup.cfg
printcraft/: README.md
printcraft.egg-info/: PKG-INFO
printcraft/examples/: table_example.py
printcraft/printcraft/: __init__.py  json_formatter.py  list_formatter.py  logging_formatter.py  preview.py  table_formatter.py  utils.py
printcraft/printcraft.egg-info/: SOURCES.txt  top_level.txt
printcraft/tests/: test_dict.py  test_json.py  test_list.py  test_preview.py
temp_unpack/printcraft-1.0.0/printcraft/examples/: auto_detect_example.py  json_example.py
temp_unpack/printcraft-1.0.0/printcraft/printcraft/: __init__.py  core.py  dict_formatter.py  json_formatter.py  list_formatter.py  preview.py  table_formatter.py  themes.py  utils.py
