[metadata]
name = printcraft
version = 0.1.0
author = Your Name
author_email = youremail@example.com
description = Beautifully formatted printing for Python: JSON, tables, dicts, lists, tuples, and more.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/printcraft
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    colorama>=0.4.6

[options.packages.find]
where = printcraft
